src/objects/Testtaker_Test_Question__c.object
<CustomObject>
    <fields>
        <fullName>How_to_Score__c</fullName>
        <label>How to Score</label>
        <picklist>
            <controllingField>Question_Type__c</controllingField>
            <picklistValues>
                <fullName>All or Nothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allow Partial Scoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t  Score</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Question__c</fullName>
        <description>Full version of the question</description>
        <label>Long Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Maximum_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maximum Points</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Per_Answer__c</fullName>
        <label>Points Per Answer</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essay Answer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Question__c</fullName>
        <description>Short version of the question displayed on reports</description>
        <label>Short Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <referenceTo>Testtaker_Test__c</referenceTo>
        <relationshipLabel>Test Questions</relationshipLabel>
        <relationshipName>Test_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Choices__c</fullName>
        <label>Total Choices</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Right_Answers__c</fullName>
        <label>Total Right Answers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Test__c</columns>
        <columns>NAME</columns>
        <columns>Short_Question__c</columns>
        <columns>Question_Type__c</columns>
        <columns>How_to_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Points_and_Scoring</fullName>
        <columns>NAME</columns>
        <columns>Test__c</columns>
        <columns>Short_Question__c</columns>
        <columns>How_to_Score__c</columns>
        <columns>Maximum_Points__c</columns>
        <columns>Points_Per_Answer__c</columns>
        <columns>Question_Type__c</columns>
        <columns>Total_Choices__c</columns>
        <columns>Total_Right_Answers__c</columns>
        <filterScope>Everything</filterScope>
        <label>Points and Scoring</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Test Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Long_Question_Required</fullName>
        <active>true</active>
        <description>A long question is required</description>
        <errorConditionFormula>ISBLANK(TRIM(Long_Question__c))</errorConditionFormula>
        <errorMessage>You must enter the long question</errorMessage>
    </validationRules>
</CustomObject>